# bliq

./: Dockerfile  README.md  check.sh  pyproject.toml
.devcontainer/: devcontainer.json
bliq/: crawler.py  llm.py
demo/medicine/: main.py
docker/: Dockerfile  SETUP_PG.md  setup.sh  setup_pg_template.sql
kava/: crawler.py  llm.py  postgres.py  store.py
tests/: test_llm.py
